# seqlock-concurrent-hash-tables

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bench_out.json  draw_bench.ipynb  draw_bench_ipynb.ipynb  draw_perf_ipynb.ipynb  enviroment.yml  init.sh  run_perf.sh
bench/: CMakeLists.txt  benchmark_hash_map.hpp  benchmark_hash_map_framework.hpp  benchmarks_main.cpp
bench/benchmarks/uint32_uint32/: data_analytics.hpp  erase_exists.hpp  find_exists.hpp  find_exists_high_contention.hpp  find_modify_eq.hpp  find_modify_eq_high_contention.hpp  find_upsert.hpp  find_upsert_high_contention.hpp  insert_or_assigns.hpp  inserts.hpp  random.hpp  utils.hpp
bench/candidates_wrappers/: cuckoo_hash_map.hpp  cuckoo_seqlock_hash_map.hpp  cuckoohash_map.hpp  seqlock_cuckoohash_map.hpp  tbb_hash_map.hpp
bench/include/: benchmark_hash_map_framework.hpp
include/common/: atomic_buffer.hpp  bucket.hpp  bucket_container.hpp  data_storage.hpp  lock_container.hpp  seqlock.hpp  utils.hpp
include/cuckoo/: bucket.hpp  bucket_container.hpp  cuckoohash_config.hpp  cuckoohash_map.hpp  cuckoohash_util.hpp  data_storage.hpp  lock_storage.hpp  seqlock.hpp
include/hash_maps/cuckoo/: cuckoo_bucket.hpp  cuckoo_bucket_container.hpp  cuckoohash_config.hpp  cuckoohash_map.hpp  cuckoohash_util.hpp
include/hash_maps/rh/: rh_bucket.hpp  rh_bucket_container.hpp  rhhash_config.hpp  rhhash_map.hpp
perf/: benchmark_hash_map.cpp  benchmark_hash_map_framework.hpp  benchmarks_main.cpp
perf/benchmark_custom_candidates/cuckoo/: concurrent_cuckoo_hash_map.hpp
perf/benchmark_custom_candidates/cuckoo_seqlock/: concurrent_cuckoo_seqlock_hash_map.hpp
perf/benchmark_custom_candidates/stl/: concurrent_stl_hash_map.hpp  concurrent_stl_map_wrapper.hpp
perf/benchmark_custom_candidates/tbb_hash/: concurrent_tbb_hash_map.hpp
perf/benchmarks/uint32_uint32/: data_analytics.hpp  erase_exists.hpp  find_exists.hpp  find_exists_high_contention.hpp  find_insert_high_contention.hpp  random.hpp
scripts/: init_cmake.sh  run_bench.sh  run_stress_checked.sh  run_stress_unchecked.sh
scripts/cuckoo/: run_stress_checked.sh  run_stress_unchecked.sh  run_unit.sh
src/cuckoo/: bucket_container.hpp  cuckoohash_config.hpp  cuckoohash_map.hpp  cuckoohash_util.hpp
tests/cuckoo/: CMakeLists.txt  test_utils.hpp
tests/cuckoo/stress_tests/: CMakeLists.txt  stress_checked.cpp  stress_unchecked.cpp
tests/cuckoo/unit_tests/: CMakeLists.txt  test_bucket_container.cpp  test_constructor.cpp  test_hash_properties.cpp  test_heterogeneous_compare.cpp  test_iterator.cpp  test_locked_table.cpp  test_maximum_hashpower.cpp  test_minimum_load_factor.cpp  test_resize.cpp  test_user_exceptions.cpp  unit_test_util.cpp  unit_test_util.hpp
